[project]
name = "tad-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=33.1.0",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "seaborn>=0.13.2",
    "shiny>=1.2.1",
    "shinywidgets>=0.4.2",
]

[tool.uv.workspace]
members = ["dashboard"]
